--- a/style.css
+++ b/style.css
@@ -202,3 +202,17 @@ a.button.pause:hover {
 .selected {
 	fill:red;
 }
+
+#dataviz { 				
+	background-color: 	#000000;
+	margin: 			0px;
+	overflow: 			hidden;
+}
+#overlay_2d{
+	-webkit-perspective:		800;
+	position:					absolute;
+	margin: 					0px;
+	width:						100%;
+	height:						100%;
+	pointer-events:				none;
+}			
