+ fixing some border color issues on country index map + improved line build times so that loading multiple years is now much faster (also improves frame rates but messes up particle animation, which will be fixed on next pass) + added selectedCountry.summary which contains the relevant data to build bar charts and historical view graph + added a loading message

--- a/style.css
+++ b/style.css
@@ -244,3 +244,13 @@ a.button.pause:hover {
 	color:					#aaaaaa;
 	float:					right;
 }
+
+#loading{
+	position:				absolute;
+	display:				inline-block;
+	background-color: 		#111111;
+	top:					50%;
+	left:					12%;
+	color:					#ffffff;
+	padding:				16px;
+}
