--- a/style.css
+++ b/style.css
@@ -47,11 +47,22 @@
 
 }	
 
+/*Import Ropa Sans Font, do we need other font file types??*/
+@font-face {
+    font-family: 'RopaSans';
+    src: url('ropasans/RopaSans-Regular.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'RopaSans';
+    src: url('ropasans/RopaSans-Italic.ttf') format('truetype');
+    font-style: italic;
+}
+
 /* Main Styles */
 body { color:#000000; font-family:'Roboto'; font-size:14px; min-width:1024px; height:768px; }
 a { color:#ffffff; text-decoration:none; text-transform:uppercase; }
 a:hover { color:#8eb423; }
-h1 { font-family:'Roboto'; font-weight:normal; text-transform:uppercase; font-size:24px; }
+h1 { font-family:'RopaSans'; font-weight:normal; }
 li { list-style-type:none; }
 
 /* Button Styles */
@@ -253,4 +264,85 @@ a.button.pause:hover {
 	left:					12%;
 	color:					#ffffff;
 	padding:				16px;
+}
+
+
+/*Styles by Pitch*/
+#hudHeader {
+    display: none;
+    position: absolute;
+    left: 35px;
+    top: 37px;
+    color: #fff;
+    font-family: 'RopaSans';
+}
+#hudHeader h1 {
+    font-size: 42px;
+    font-family: 'RopaSans';
+    margin: 0 0 25px 0;
+}
+#hudHeader .countryTextInput {
+    font-size: 22px;
+    width: 330px;
+    padding-left: 5px;
+   	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	font-family: 'RopaSans';
+    
+}
+#hudHeader .armsBtn {
+    background: #333333;
+    padding: 2px 10px;
+    color: white;
+    border: 0;
+    font-size: 25px;
+   	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	font-family: 'RopaSans';
+	cursor: pointer;
+}
+
+#barGraph {
+    position: absolute;
+    top:190px;
+    left:0;
+}
+#barGraph .import.ammo {
+	fill: #308a8a;
+}
+#barGraph .import.civ {
+	fill: #72b4d7;
+}
+#barGraph .import.mil {
+	fill:#1482bd;
+}
+#barGraph .export.ammo {
+	fill: #785201;
+}
+#barGraph .export.civ {
+	fill: #f6c867;
+}
+#barGraph .export.mil {
+	fill:#f0a401;
+}
+#barGraph .importLabel text,#barGraph .exportLabel text {
+	fill: white;
+    font-family:Roboto;
+}
+#barGraph .totalLabel {
+    fill: white;
+    font-family:Roboto;
+    font-size: 24px;
+}
+#barGraph .exportLabel {
+    font-family: Roboto;
+    font-size: 15px;
+    fill: #f99318;
+}
+#barGraph .importLabel {
+    font-family: Roboto;
+    font-size: 15px;
+    fill: #2e81bb;
 }
