--- a/style.css
+++ b/style.css
@@ -276,8 +276,8 @@ a.button.pause:hover {
 Elements to control the title and country selector
 */
 #hudHeader {
-    display: 				none;
     position: 				absolute;
+    width: 					100%;
     left: 					30px;
     top: 					30px;
     color: 					#fff;
@@ -287,28 +287,40 @@ Elements to control the title and country selector
     font-size: 				42px;
     font-family: 			'RopaSans';
     margin: 				0 0 25px 0;
+    display:block;
+    float:left;
 }
 #hudHeader .countryTextInput {
+    float: right;
     font-size: 				22px;
     width: 					330px;
-    padding-left: 			5px;
+    margin-right: 			5px;
    	-webkit-border-radius:  4px;
 	-moz-border-radius: 	4px;
 	border-radius: 			4px;
 	font-family: 			'RopaSans';
-    
 }
 #hudHeader .armsBtn {
+    float: right;
     background: 			#333333;
     padding: 				2px 10px;
     color: 					white;
     border: 				0;
-    font-size: 				25px;
+    font-size: 				23px;
    	-webkit-border-radius: 	4px;
 	-moz-border-radius: 	4px;
 	border-radius: 			4px;
 	font-family: 			'RopaSans';
 	cursor: 				pointer;
+	margin-right: 			60px;
+}
+
+#hudHeader .aboutBtn {
+	display:				block;
+	clear:					both;
+	margin-right: 			60px;
+	margin-top: 			-27px;
+	width: 					90px;
 }
 
 /*
@@ -318,6 +330,7 @@ Bar graph on left
     position: absolute;
     bottom:10px;
     left:0;
+    opacity: 0.9;
 }
 #barGraph .import.ammo {
 	fill: 					#308a8a;
@@ -357,18 +370,17 @@ Bar graph on left
     fill: 					#2e81bb;
 }
 #history {
-    position: absolute;
-    bottom: 0;
-    left: 527px;
-    background: #2b2b2b;
-    display: none;
-    
+    position: 				absolute;
+    bottom: 				0;
+    left: 					386px;
+    background-color: 		rgba(43,43,43,0.6);
+    display: 				none;
    	-webkit-border-top-left-radius:	5px;
-	-moz-border-radius-topleft: 5px;
-	border-top-left-radius: 5px;
+	-moz-border-radius-topleft: 	5px;
+	border-top-left-radius: 		5px;
 	-webkit-border-top-right-radius:	5px;
-	-moz-border-radius-topright: 5px;
-	border-top-right-radius: 5px;
+	-moz-border-radius-topright: 	5px;
+	border-top-right-radius: 		5px;
 	
 }
 #history ul {
@@ -462,7 +474,7 @@ Bar graph on left
     height: 42px;
     position: absolute;
     bottom: 10px;
-    left: 1395px;
+    left: 1255px;
     cursor: pointer;
     background: url('graphIcon.png') 0 0 no-repeat;
     display: none;
