--- a/style.css
+++ b/style.css
@@ -282,6 +282,7 @@ Elements to control the title and country selector
     top: 					30px;
     color: 					#fff;
     font-family: 			'RopaSans';
+    display:none;
 }
 #hudHeader h1 {
     font-size: 				42px;
@@ -303,7 +304,7 @@ Elements to control the title and country selector
 #hudHeader .armsBtn {
     float: right;
     background: 			#333333;
-    padding: 				2px 10px;
+    padding: 				3px 10px 4px;
     color: 					white;
     border: 				0;
     font-size: 				23px;
@@ -469,6 +470,102 @@ Bar graph on left
     font-size: 18px;
     fill: #fff;
 }
+#importExportBtns {
+    position: absolute;
+    right: 20px;
+    bottom: 10px;
+    color: white;
+    display: none;
+}
+#importExportBtns>div>div {
+    float: left;
+    width: 84px;
+    text-align: center;
+    height: 34px;
+}
+#importExportBtns .imex>div {
+    background: #262626;
+}
+#importExportBtns .typeLabels div {
+    font-family: Roboto;
+    font-size: 16px;
+    text-transform: uppercase;
+}
+
+#importExportBtns .imex>div {
+    -webkit-border-radius:  4px;
+	-moz-border-radius: 	4px;
+	border-radius: 			4px;
+	cursor: pointer;
+}
+#importExportBtns>div>.label {
+    width: 115px;
+    text-transform: uppercase;
+    font-family: Roboto;
+    font-size: 24px;
+    margin-left: 10px;
+    background: #262626;
+    vertical-align: middle;
+    padding-top: 3px;
+    height: 31px;
+    cursor: text;
+}
+#importExportBtns .imports .label {
+    color: #2e81bb
+}
+#importExportBtns .exports .label {
+    color: #f99318;
+}
+#importExportBtns .imports {
+    margin-bottom: 5px;
+}
+#importExportBtns .mil, #importExportBtns .civilian {
+    margin-right: 5px;
+}
+#importExportBtns .imex .check {
+    width: 20px;
+    height: 20px;
+    background: #262626 url('importExportIcons.png') 0 0 no-repeat;
+    margin: 6px auto;
+}
+#importExportBtns .imports .mil .check {
+    background-position: 0px 0px;
+}
+#importExportBtns .imports .mil .check.inactive {
+    background-position: 0px -20px;
+}
+#importExportBtns .imports .civilian .check {
+    background-position: -20px 0px;
+}
+#importExportBtns .imports .civilian .check.inactive {
+    background-position: -20px -20px;
+}
+#importExportBtns .imports .ammo .check {
+    background-position: -40px 0px;
+}
+#importExportBtns .imports .ammo .check.inactive {
+    background-position: -40px -20px;
+}
+#importExportBtns .exports .mil .check {
+    background-position: -60px 0px;
+}
+#importExportBtns .exports .mil .check.inactive {
+    background-position: -60px -20px;
+}
+#importExportBtns .exports .civilian .check {
+    background-position: -80px 0px;
+}
+#importExportBtns .exports .civilian .check.inactive {
+    background-position: -80px -20px;
+}
+#importExportBtns .exports .ammo .check {
+    background-position: -100px 0px;
+}
+#importExportBtns .exports .ammo .check.inactive {
+    background-position: -100px -20px;
+}
+
+
 #graphIcon {
     width: 42px;
     height: 42px;
@@ -478,4 +575,24 @@ Bar graph on left
     cursor: pointer;
     background: url('graphIcon.png') 0 0 no-repeat;
     display: none;
+}
+
+
+.ui-autocomplete .ui-menu-item {
+    border-top:1px solid #656565;
+    margin-left: -39px;
+    padding-left: 4px;
+    font-family: RopaSans;
+    font-size: 28px;
+    color: white;
+    background:#333;
+    width: 331px;
+}
+.ui-autocomplete #ui-active-menuitem {
+    background: white;
+    color: black;
+    width: 331px;
+    display: block;
+    margin-left: -4px;
+    padding-left: 4px;
 }
