histogram now reflects import/export buttons, bar graph numeric label font size is variable, the country markers no longer wrap when on the right edge of the screen

--- a/style.css
+++ b/style.css
@@ -249,14 +249,14 @@ a.button.pause:hover {
 }	
 
 .country {
-	float:					left;
+	/*float:					left;*/
 	margin-right:			10px;
 }
 
 
 .detail {
 	color:					#aaaaaa;
-	float:					right;
+	/*float:					right;*/
 }
 
 #loading{
