--- a/style.css
+++ b/style.css
@@ -66,154 +66,6 @@ h1 { font-family:'RopaSans'; font-weight:normal; }
 h2 { font-family:'RopaSans'; font-weight:normal; }
 li { list-style-type:none; }
 
-/* Button Styles */
-.buttonlist { 
-	margin:0;
-	padding:0;
-	border:1px solid #323232;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-}
-.buttonlist li { float:left; }
-
-a.button {  
-	display:block;
-	padding:8px 10px;
-	/* background */
-	background: rgb(23,23,23); /* Old browsers */
-	background: -moz-linear-gradient(top, rgba(23,23,23,1) 0%, rgba(9,9,9,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(23,23,23,1)), color-stop(100%,rgba(9,9,9,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, rgba(23,23,23,1) 0%,rgba(9,9,9,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, rgba(23,23,23,1) 0%,rgba(9,9,9,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, rgba(23,23,23,1) 0%,rgba(9,9,9,1) 100%); /* IE10+ */
-	background: linear-gradient(top, rgba(23,23,23,1) 0%,rgba(9,9,9,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#171717', endColorstr='#090909',GradientType=0 ); /* IE6-9 */
-}
-a.button:hover {
-	/* background */
-	background: rgb(31,31,31); /* Old browsers */
-	background: -moz-linear-gradient(top, rgba(31,31,31,1) 0%, rgba(19,19,19,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(31,31,31,1)), color-stop(100%,rgba(19,19,19,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, rgba(31,31,31,1) 0%,rgba(19,19,19,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, rgba(31,31,31,1) 0%,rgba(19,19,19,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, rgba(31,31,31,1) 0%,rgba(19,19,19,1) 100%); /* IE10+ */
-	background: linear-gradient(top, rgba(31,31,31,1) 0%,rgba(19,19,19,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1f1f1f', endColorstr='#131313',GradientType=0 ); /* IE6-9 */
-}
-
-a.button.center {
-	border-right:1px solid #222222;
-	-webkit-border-top-left-radius: 4px;
-	-webkit-border-bottom-left-radius: 4px;
-	-moz-border-radius-topleft: 4px;
-	-moz-border-radius-bottomleft: 4px;
-	border-top-left-radius: 4px;
-	border-bottom-left-radius: 4px;
-	border-left: 1px solid #000000;
-	-webkit-border-top-right-radius: 4px;
-	-webkit-border-bottom-right-radius: 4px;
-	-moz-border-radius-topright: 4px;
-	-moz-border-radius-bottomright: 4px;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;	
-}
-
-a.button.left {
-	border-right:1px solid #222222;
-	-webkit-border-top-left-radius: 4px;
-	-webkit-border-bottom-left-radius: 4px;
-	-moz-border-radius-topleft: 4px;
-	-moz-border-radius-bottomleft: 4px;
-	border-top-left-radius: 4px;
-	border-bottom-left-radius: 4px;
-	-webkit-border-top-right-radius: 0;
-	-webkit-border-bottom-right-radius: 0;
-	-moz-border-radius-topright: 0;
-	-moz-border-radius-bottomright: 0;
-	border-top-right-radius: 0;
-	border-bottom-right-radius: 0;
-}
-a.button.right {
-	border-left: 1px solid #000000;
-	-webkit-border-top-left-radius: 0;
-	-webkit-border-bottom-left-radius: 0;
-	-moz-border-radius-topleft: 0;
-	-moz-border-radius-bottomleft: 0;
-	border-top-left-radius: 0;
-	border-bottom-left-radius: 0;
-	-webkit-border-top-right-radius: 4px;
-	-webkit-border-bottom-right-radius: 4px;
-	-moz-border-radius-topright: 4px;
-	-moz-border-radius-bottomright: 4px;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
-}
-a.button.middle {
-	border-left: 1px solid #000000;
-	border-right:1px solid #222222;
-	-webkit-border-top-left-radius: 0;
-	-webkit-border-bottom-left-radius: 0;
-	-moz-border-radius-topleft: 0;
-	-moz-border-radius-bottomleft: 0;
-	border-top-left-radius: 0;
-	border-bottom-left-radius: 0;
-	-webkit-border-top-right-radius: 0;
-	-webkit-border-bottom-right-radius: 0;
-	-moz-border-radius-topright: 0;
-	-moz-border-radius-bottomright: 0;
-	border-top-right-radius: 0;
-	border-bottom-right-radius: 0;
-}
-a.button.disabled {
-	color:#565655;
-}
-
-a.button.active { 
-	color:#8eb423; 
-}
-
-a.button.play {
-	width:18px;
-	text-indent:-10000px;
-	background:url(images/play-pause.png) no-repeat center 2px;
-}
-
-a.button.play.active {
-	width:18px;
-	text-indent:-10000px;
-	background:url(images/play-pause.png) no-repeat center -28px;
-}
-
-a.button.play:hover {
-	width:18px;
-	text-indent:-10000px;
-	background:url(images/play-pause.png) no-repeat center -28px;
-}
-
-a.button.pause {
-	width:18px;
-	text-indent:-10000px;
-	background:url(images/play-pause.png) no-repeat center -58px;
-}
-
-a.button.pause.active {
-	width:18px;
-	text-indent:-10000px;
-	background:url(images/play-pause.png) no-repeat center -88px;
-}
-
-a.button.pause:hover {
-	width:18px;
-	text-indent:-10000px;
-	background:url(images/play-pause.png) no-repeat center -88px;
-}
-
-
-
-.selected {
-	fill:red;
-}
 
 #dataviz { 				
 	background-color: 	#000000;
@@ -232,8 +84,6 @@ a.button.pause:hover {
 .marker {
 	position:				absolute;
 	display:				inline-block;
-	/*width:					100px;
-	height:					20px;*/
 	background-color: 		rgba(0,0,0,.87);	
 	color:					#ffffff;
 	font-size:				4pt;
@@ -249,14 +99,12 @@ a.button.pause:hover {
 }	
 
 .country {
-	/*float:					left;*/
 	margin-right:			10px;
 }
 
 
 .detail {
 	color:					#aaaaaa;
-	/*float:					right;*/
 }
 
 #loading{
@@ -330,10 +178,7 @@ Elements to control the title and country selector
     float: right;
     font-size: 				18px;
     width: 					330px;
-    margin-right: 			5px;/*
-   	-webkit-border-radius:  4px;
-	-moz-border-radius: 	4px;
-	border-radius: 			4px;*/
+    margin-right: 			5px;
 	font-family: 			'RopaSans';
 	text-transform:          uppercase;
 }
@@ -343,14 +188,11 @@ Elements to control the title and country selector
     padding: 				3px 10px 2px;
     color: 					white;
     border: 				0;
-    font-size: 				19px;/*
-   	-webkit-border-radius: 	4px;
-	-moz-border-radius: 	4px;
-	border-radius: 			4px;*/
+    font-size: 				19px;
 	font-family: 			'RopaSans';
 	cursor: 				pointer;
 	margin-right: 			60px;
-	opacity: 0.9;
+	opacity:                0.9;
 }
 #hudHeader .armsBtn:hover {
     opacity: 1;
@@ -361,10 +203,19 @@ Elements to control the title and country selector
 	margin-right: 			60px;
 	margin-top: 			-44px;
 	width: 					78px;
+
 }
 #hudHeader .zoomBtn {
     margin-right:           5px;
+    width:                  30px;
+    font-weight:            bold;
+    height:                 25px;
 }
+
+#hudHeader .zoomOutBtn {
+    font-size:              17px;
+}
+
 .ui-autocomplete .ui-menu-item {
     border-top:             1px solid #656565;
     margin-left:            -39px;
@@ -394,13 +245,13 @@ Bar graph on left
     opacity: 0.9;
 }
 #barGraph .import.ammo {
-	fill: 					#70B4CB;
+	fill: 					#44B2D4;
 }
 #barGraph .import.civ {
-	fill: 					#2068DF;
+	fill: 					#4679C1;
 }
 #barGraph .import.mil {
-	fill:					#154492;
+	fill:					#1658B2;
 }
 #barGraph .export.ammo {
 	fill: 					#FFA90B;
@@ -428,7 +279,7 @@ Bar graph on left
 #barGraph .importLabel {
     font-family: 			Roboto;
     font-size: 				14px;
-    fill: 					#70B4CB;
+    fill: 					#44B2D4;
 }
 #barGraph .barGraphLabelBG {
     fill: rgba(0,0,0,0.8);
@@ -439,13 +290,7 @@ Bar graph on left
     bottom: 				0;
     left: 					386px;
     background-color: 		rgba(43,43,43,0.9);
-    display: 				none;/*
-   	-webkit-border-top-left-radius:	   5px;
-	-moz-border-radius-topleft: 	   5px;
-	border-top-left-radius: 		   5px;
-	-webkit-border-top-right-radius:   5px;
-	-moz-border-radius-topright: 	   5px;
-	border-top-right-radius: 		   5px;*/
+    display: 				none;
 }
 #history ul {
     list-style-type:        none;
@@ -519,10 +364,10 @@ Bar graph on left
     stroke-width: 2px;
 }
 #histogram .export {
-    stroke: #FFA90B
+    stroke:         #FFA90B;
 }
 #histogram .import {
-    stroke: #70B4CB;
+    stroke:         #44B2D4;
 }
 #histogram .tick {
     fill:           none;
@@ -569,10 +414,6 @@ Bar graph on left
 }
 
 #importExportBtns .imex>div {
-/*
-    -webkit-border-radius:  4px;
-	-moz-border-radius: 	4px;
-	border-radius: 			4px;*/
 	cursor: pointer;
 	opacity: 0.9;
 }
@@ -591,7 +432,7 @@ Bar graph on left
     padding-top:        3px;
 }
 #importExportBtns .imports .label {
-    color:              #70B4CB
+    color:              #44B2D4;
 }
 #importExportBtns .exports .label {
     color:              #FFA90B;
@@ -698,4 +539,5 @@ Bar graph on left
     font-size: 15px;
     font-family: Roboto;
     font-weight: bold;
+    color: #FFA90B;
 }
