added color to about links

--- a/style.css
+++ b/style.css
@@ -539,7 +539,7 @@ Bar graph on left
     font-size: 15px;
     font-family: Roboto;
     font-weight: bold;
-    color: white;
+    color: #FFA90B;
 }
 #aboutBox a:hover {
     text-decoration: underline;
