--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ Elements to control the title and country selector
     width:                  30px;
     font-weight:            bold;
     height:                 25px;
+    margin-top:             2px;
 }
 
 #hudHeader .zoomOutBtn {
